--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <meta name="googlebot" content="index,follow,snippet,archive">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>IT Worker | responsive portfolio template</title>
+    <title>Portfolio | SPE | Chris Stalman</title>
 
-    <meta name="keywords" content="">
+    <meta name="keywords" content="Portfolio Security Privacy Ethiek Chris Stalman Windesheim">
 
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700,100%7CRoboto:400,700,300,100' rel='stylesheet' type='text/css'>
 
@@ -121,7 +121,7 @@ _________________________________________________________ -->
                 <div class="row">
 
                     <div class="col-sm-12">
-                        <h2 class="title" data-animate="fadeInDown">About me</h2>
+                        <h2 class="title" data-animate="fadeInDown">Over deze site</h2>
                     </div>
 
                     <div class="col-sm-12">
@@ -130,82 +130,23 @@ _________________________________________________________ -->
 
                             <div class="col-sm-6 text-left" data-animate="fadeInUp">
 
-                                <p>An sincerity so extremity he additions. Her yet <strong>there truth merit</strong>. Mrs all projecting favourable now unpleasing. Son law garden chatty temper. Oh children provided to mr elegance marriage strongly. Off can
-                                    admiration prosperous now devonshire diminution law.</p>
+                                <p>Deze website is gemaakt in het kader van de Lerarenopleiding Technisch Beroepsonderwijs (ICT) aan Hogeschool Windesheim.</p>
 
-                                <p>Received overcame oh sensible so at an. Formed do change merely to county it. <strong>Am separate contempt</strong> domestic to to oh. On relation my so addition branched. Put hearing cottage she norland letters equally prepare
-                                    too. Replied exposed savings he no viewing as up. Soon body add him hill. No father living really people estate if. Mistake do produce beloved demesne if am pursuit.</p>
+                                <p>Voor het vak Security, Privacy en Ethiek (SPE) heb ik een aantal video's bekeken en daar een review over gemaakt. Iedere week heb ik een artikel gekozen om te bespreken met de groep. Verder heb ik een zestal thema's uitgewerkt.</p>
 
-                                <p>An sincerity so extremity he additions. Her yet <strong>there truth merit</strong>. Mrs all projecting favourable now unpleasing. Son law garden chatty temper. Oh children provided to mr elegance marriage strongly. Off can
-                                    admiration prosperous now devonshire diminution law.</p>
+                                <p>Het resultaat hiervan is op deze site te vinden.</p>
 
                             </div>
 
                             <div class="col-sm-6" data-animate="fadeInUp">
-
-                                <div class="skill-item">
-                                    <div class="progress-title">
-                                        PHP
-                                    </div>
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-skill1" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-                                            <span class="sr-only">60</span>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="skill-item">
-                                    <div class="progress-title">
-                                        Javascript
-                                    </div>
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-skill2" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
-                                            <span class="sr-only">70</span>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="skill-item">
-                                    <div class="progress-title">
-                                        HTML coding
-                                    </div>
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-skill3" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
-                                            <span class="sr-only">80</span>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="skill-item">
-                                    <div class="progress-title">
-                                        SEO
-                                    </div>
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-skill4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
-                                            <span class="sr-only">90</span>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="skill-item">
-                                    <div class="progress-title">
-                                        SEM
-                                    </div>
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-skill5" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
-                                            <span class="sr-only">70</span>
-                                        </div>
-                                    </div>
-                                </div>
-
-
+                                <a href="https://www.windesheim.nl/studeren/opleidingen/onderwijs/lerarenopleiding-technisch-beroepsonderwijs/"><img src="img/win-logo.jpg" class="img-responsive" alt="Windesheim logo" /></a>
                             </div>
                         </div>
 
                     </div>
 
                     <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4 mt-big" data-animate="bounceIn">
-                        <img src="img/about.jpg" class="image img-circle img-responsive" alt="This is me - IT worker">
+                        <img src="img/win-t.jpg" class="image img-circle img-responsive" alt="Windesheim Gebouw T">
                     </div>
                 </div>
             </div>
@@ -759,57 +700,6 @@ _________________________________________________________ -->
 
         <!-- *** TESTIMONIALS END *** -->
 
-        <!-- *** SHOWCASE ***
-_________________________________________________________ -->
-        <div class="section text-parallax parallax-image1" id="services">
-            <div class="container">
-                <div class="row showcase">
-                    <div class="col-md-3 col-sm-6" data-animate="fadeInUp">
-                        <div class="item">
-                            <div class="icon"><i class="fa fa-align-justify"></i>
-                            </div>
-                            <h4><span class="counter">120</span><br>
-
-			Websites</h4>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6" data-animate="fadeInUp">
-                        <div class="item">
-                            <div class="icon"><i class="fa fa-users"></i>
-                            </div>
-                            <h4><span class="counter">50</span><br>  
-
-			Satisfied Clients</h4>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6" data-animate="fadeInUp">
-                        <div class="item">
-                            <div class="icon"><i class="fa fa-copy"></i>
-                            </div>
-                            <h4><span class="counter">320</span><br>
-
-			Projects</h4>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6" data-animate="fadeInUp">
-                        <div class="item">
-                            <div class="icon"><i class="fa fa-font"></i>
-                            </div>
-                            <h4><span class="counter">333</span><br> 
-
-			Magazines and Brochures</h4>
-                        </div>
-                    </div>
-                </div>
-                <!-- /.row -->
-            </div>
-            <!-- /.container -->
-
-            <div class="dark-mask"></div>
-
-        </div>
-        <!-- /.section -->
-
         <!-- *** REFERENCES IMAGE ***
 _________________________________________________________ -->
         <div class="section" id="themas">
@@ -1139,16 +1029,6 @@ _________________________________________________________ -->
 
         <!-- *** CONTACT END *** -->
 
-        <!-- *** MAP ***
-_________________________________________________________ -->
-
-        <div class="section" id="map">
-
-        </div>
-        <!-- /.section -->
-
-        <!-- *** MAP END *** -->
-
         <!-- *** FOOTER ***
 _________________________________________________________ -->
 
@@ -1205,17 +1085,11 @@ _________________________________________________________ -->
     <!-- waypoints for scroll spy -->
     <script src="js/waypoints.min.js"></script>
 
-    <!-- maps -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script>
-    <!-- to use it on your site, generate your own API key for Google Maps and paste it above -->
-    <script src="js/gmaps.js"></script>
-
     <!-- masonry layout -->
     <script src="js/masonry.pkgd.min.js"></script>
 
     <!-- owl carousel -->
     <script src="js/owl.carousel.min.js"></script>
-
 
     <!-- jQuery scroll to -->
     <script src="js/jquery.scrollTo.min.js"></script>
@@ -1229,10 +1103,6 @@ _________________________________________________________ -->
     <!-- main js file -->
 
     <script src="js/front.js"></script>
-
-    
-
-
 
 </body>
 
