--- a/index.html
+++ b/index.html
@@ -558,11 +558,15 @@ _________________________________________________________ -->
                 <div class="col-md-12">
 
 
-                    <h2 class="title">Contact me</h2>
+                    <h2 class="title">Contact</h2>
 
                     <div class="row">
 
                         <div class="col-md-8 col-md-offset-2">
+                        <h4>
+                        Voor contactmogelijkheden, zie de social-buttons hieronder.
+                        </h4>
+                        <!--
                             <form id="contact-form" method="post" action="contact.php">
 
                                 <div class="messages">
@@ -573,27 +577,28 @@ _________________________________________________________ -->
 
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <input type="text" name="name" class="form-control" placeholder="Your firstname *" required="required">
+                                            <input type="text" name="name" class="form-control" placeholder="Voornaam *" required="required">
                                         </div>
                                         <div class="col-md-6">
-                                            <input type="text" name="surname" class="form-control" placeholder="Your lastname *" required="required">
+                                            <input type="text" name="surname" class="form-control" placeholder="Achternaam *" required="required">
                                         </div>
                                         <div class="col-md-6">
-                                            <input type="text" name="email" class="form-control" placeholder="Your email *" required="required">
+                                            <input type="text" name="email" class="form-control" placeholder="E-mail *" required="required">
                                         </div>
                                         <div class="col-md-6">
-                                            <input type="text" name="phone" class="form-control" placeholder="Your phone">
+                                            <input type="text" name="phone" class="form-control" placeholder="Telefoon">
                                         </div>
                                         <div class="col-md-12">
-                                            <textarea name="message" class="form-control" placeholder="Message for me *" rows="4" required="required"></textarea>
+                                            <textarea name="message" class="form-control" placeholder="Bericht *" rows="4" required="required"></textarea>
                                         </div>
                                         <div class="col-md-12 text-center">
-                                            <input type="submit" class="btn btn-primary btn-lg" value="Send message">
+                                            <input type="submit" class="btn btn-primary btn-lg" value="Bericht verzenden">
                                         </div>
                                     </div>
                                 </div>
 
                             </form>
+                            -->
                         </div>
 
                     </div>
@@ -618,10 +623,9 @@ _________________________________________________________ -->
                     <div class="col-sm-6">
 
                         <p class="social">
-                            <a href="f" class="external facebook" data-animate-hover="shake" data-animate="fadeInUp"><i class="fa fa-facebook"></i></a>
-                            <a href="#" class="external instagram" data-animate-hover="shake" data-animate="fadeInUp"><i class="fa fa-instagram"></i></a>
-                            <a href="#" class="external gplus" data-animate-hover="shake" data-animate="fadeInUp"><i class="fa fa-google-plus"></i></a>
-                            <a href="#" class="email" data-animate-hover="shake" data-animate="fadeInUp"><i class="fa fa-envelope"></i></a>
+                            <a href="https://twitter.com/chrisenkarin" class="external twitter" data-animate-hover="shake" data-animate="fadeInUp"><i class="fa fa-twitter"></i></a>
+                            <a href="https://www.instagram.com/chrisenkarin/" class="external instagram" data-animate-hover="shake" data-animate="fadeInUp"><i class="fa fa-instagram"></i></a>
+                            <a href="mailto:chrisstalman[@]gmail.com" class="email" data-animate-hover="shake" data-animate="fadeInUp"><i class="fa fa-envelope"></i></a>
                         </p>
                     </div>
                     <!-- /.6 -->
