--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@ _________________________________________________________ -->
                 <div class="container">
                     <div class="row">
                         <div class="carousel-caption">
-                            <div data-animate="fadeInDown" class="logo">
+                            <!--<div data-animate="fadeInDown" class="logo">
                                 <img src="img/logo-big.png" alt="logo" width="130">
-                            </div>
+                            </div>-->
                             <h1 data-animate="fadeInDown">Security, privacy en ethiek</h1>
                             <h2 data-animate="slideInUp">Drie onderwerpen die nauw met elkaar samenhangen. Hier vind je artikelen, reviews en uitgewerkte thema's over deze onderwerpen.</h2>
                         </div>
