--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@ _________________________________________________________ -->
                                     <img src="img/app-theme.jpg" class="img-responsive" alt="" />
 
                                     <div class="overlay">
-                                        <h3 class="reference-title">Applicatiesecurity</h3> 
+                                        <h3 class="reference-title">Softwaresecurity</h3> 
                                         <p>Tips voor veilig programmeren</p>
                                     </div>
                                 </a>
