--- a/index.html
+++ b/index.html
@@ -652,12 +652,26 @@ _________________________________________________________ -->
                                     </div>
                                 </a>
 
-                                <div class="sr-only reference-description" data-images="img/uni.png">
-
-                                    <p class="buttons">
-                                        <a class="btn btn-primary" target="_blank" href="https://xn--bdk.ws/"><i class="fa fa-globe"></i> Bezoek website</a>
-                                        <a class="btn btn-primary" target="_blank" href="https://twitter.com/mattjay/status/965650109923983360"><i class="fa fa-download"></i> Voorbeeld misbruik</a>
-                                    </p>
+                                <div class="sr-only reference-description" data-images="img/ait1.jpg,img/ait2.jpg,img/ait3.jpg">
+                                <h3>Kunstmatige intelligentie</h3>
+                                  <p>De successen van IBM’s Deep Blue met schaken eind vorige eeuw en veel recenter de overwinning van Googles Deep Mind met het spel Go tonen aan dat kunstmatige intelligentie het menselijk vernuft kan overtreffen. Op het gebeid van patroonherkenning zijn kunstmatig intelligente systemen inmiddels zelfs zo ver, dat overheden op verschillende plaatsen op de wereld al proeven met zelfsturende auto’s op de openbare weg durven toestaan.
+                                  <br>Wat zijn de grenzen zijn van computer-intelligentie en welke gevaren kan dit opleveren voor ons voortbestaan?</p>
+                                  <p>Kunstmatige intelligentie heeft vaak iets onheilspellends. Zo waarschuwden toonaangevende wetenschappers en denkers als Stephen Hawking, Bill Gates en Elon Musk in het verleden al meermaals voor de gevaren die schuilgaan achter het succes in het ontwikkelen van AI: het kan de grootste gebeurtenis in de menselijke geschiedenis worden, en veel erger, de mensheid in potentie vernietigen als wij de controle verliezen.</p>
+                                
+                                <h3>Ethiek</h3>
+                                <p>"Het is één van de grootste vraagstukken van de komende decennia", zegt Jeroen van den Hoven, hoogleraar Ethiek en Technologie aan de Technische Universiteit Delft. "Houden wij de controle of controleert de technologie straks ons? De tijd is aangebroken dat we moeten opletten." Volgens hem gaan we ons steeds meer realiseren hoe slim software kan zijn: "De zelflerende Google Car natuurlijk, maar ook de Volkswagen-affaire zet mensen aan het denken. Ze realiseren zich: ik weet er niets van, deze slimme software misleid ons."
+                                <br>Er is een stroming die stelt dat ethiek niet meer is dan een veredelde kosten-batenafweging. Waarbij de baten op verschillende manieren kunnen worden gemeten: in geld, geluk, plezier, vrije tijd. In die optiek is een AI-systeem heel goed in staat 'ethische' output te genereren. Als alle relevante data, constraints en doel eenmaal gegeven zijn, kan AI beter dan de mens optimaliseren. Maar daarmee wordt de ethiek en de morele dimensie van ons leven drastisch versmald. In mijn visie is ethiek veel meer dan dat. Ethiek gaat juist over het bepalen door mensen van wat relevant en belangrijk is voor mensen. Ethiek heeft betrekking op begrippen als medemenselijkheid, respect, waardigheid, geluk, mededogen, vrijheid, privacy, mensenrechten. Dat soort waarden is niet adequaat te definiëren zonder menselijke tussenkomst. Die waarden zullen ook een rol moeten spelen in het ontwerp, gebruik en de evaluatie van intelligente systemen.</p>
+                                <p>
+                                De discussie over het algoritme en de data moet worden gevoerd met de mensen die geraakt worden door het algoritme. Het is eigenlijk een politieke keuze</p>
+                                <h3>Links</h3>
+                                  <ul>
+                                  <li><a target="_blank" href="https://www.agconnect.nl/artikel/de-ethiek-van-kunstmatige-intelligentie">AG Connect</a>
+                                  </li>
+                                  <li><a target="_blank" href="https://www.bright.nl/nieuws/kunstmatige-intelligentie-angst-en-enthousiasme">Bright</a></li>
+                                  <li><a target="_blank" href="https://www.trouw.nl/samenleving/computersystemen-bepalen-steeds-vaker-wat-we-zien-maar-hoe-leer-je-een-computer-wat-ethiek-is-~aae4dca0/">Trouw</a></li>
+                                 </ul>
+                                  
+                                  <p>Meer informatie over dit thema is ook te vinden bij mijn artikelen.</p>
                                 </div>
                             </div>
                         </div>
