--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ _________________________________________________________ -->
                     </div>
 
                     <ul id="filter" data-animate="fadeInUp">
-                        <li class="active"><a href="#" data-filter="all">All</a>
+                        <li class="active"><a href="#" data-filter="all">Alles</a>
                         </li>
                         <li><a href="#" data-filter="review">Reviews</a>
                         </li>
