--- a/index.html
+++ b/index.html
@@ -314,7 +314,12 @@
                                         <p class="text-left">SQL Injection is een techniek waarbij een aanvaller een SQL commando maakt of verandert om zo meer gegevens te zien, in te loggen, of systeemcommando's uit te voeren. Dit wordt gedaan door de gebruikersinvoer te combineren met extra tekens om een SQL query te schrijven.<br>
                                         Door prepared statements te gebruiken, voorkom je dit. Een prepared statement is een gecompileerde query, die meerdere keren snel achter elkaar uitgevoerd kan worden.<br>
                                         Door dit te combineren met bind variabelen, wordt SQL injection onmogelijk gemaakt.</p> 
-                                        <p class="text-left">Binnen de PHP PDO database extensie, gebruik je de volgende commando's: <em>$sth = $dbh->prepare($sql)</em> en <em>$sth->binParam(':param1', $param1, PDO:: PARAM_INT)</em>. Dit bereidt de query voor. Deze kun je vervolgens uitvoeren met <em>$sth->execute()</em>.
+                                        <p class="text-left">Binnen de PHP PDO database extensie, gebruik je de volgende commando's: 
+                                        <ul><li><em>$sth = $dbh->prepare($sql)</em></li>  
+                                        <li><em>$sth->bindParam(':param1', $param1, PDO:: PARAM_INT)</em></li>
+                                        <li><em>$sth->execute()</em></li>
+                                        </ul>
+                                        <p>Met het eerste statement bereidt je de query voor. Het tweede commando zorgt er voor dat de parameters verwerkt worden en escape tekens worden toegepast waar nodig. De laatste regel voert de query uit.</p>
                                         <p class="text-left">Hiermee kan SQL injectie niet meer worden toegepast. Alle invoer wordt als parameter gezien en niet meer als onderdeel van de query. Ook wordt het datatype meegegeven en er kan dus geen tekst worden doorgegeven als er een getal wordt verwacht.
                                     </div>
                                 </div>
